force-app/main/default/objects/Asset/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <length>100</length>
    <type>Text</type>
</CustomField>