force-app/main/default/objects/Asset/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <description>Type of device for the subscriber. Values can be Mobile, Tablet or Phone</description>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Wearable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>