force-app/main/default/objects/Asset/fields/Make_and_Model__c.field-meta.xml
<CustomField>
    <fullName>Make_and_Model__c</fullName>
    <description>Device name and version.</description>
    <label>Make and Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>