force-app/main/default/objects/Asset/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Company that manufactures the device.</description>
    <label>Manufacturer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>