force-app/main/default/objects/Asset/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Subscriber&apos;s phone number.</description>
    <label>Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>