force-app/main/default/objects/Asset/fields/Phone_Number_Display__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Display__c</fullName>
    <description>Subscriber&apos;s phone number in a readable format.</description>
    <label>Phone Number Display</label>
    <length>20</length>
    <type>Text</type>
</CustomField>