force-app/main/default/objects/Asset/fields/Unlimited_Data__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track if Data is unlimited for this subscriber</description>
    <label>Unlimited Data</label>
    <type>Checkbox</type>
</CustomField>