force-app/main/default/objects/Asset/fields/Unlimited_Talk__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_Talk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track if Talk is unlimited for this subscriber</description>
    <label>Unlimited Talk</label>
    <type>Checkbox</type>
</CustomField>