force-app/main/default/objects/Asset/fields/Unlimited_Text__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track if Text is unlimited for this subscriber</description>
    <label>Unlimited Text</label>
    <type>Checkbox</type>
</CustomField>