force-app/main/default/objects/Asset/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Name of the person the device is related to.</description>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>