force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Device_Type__c</columns>
    <columns>User__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Manufacturer__c</columns>
    <columns>Make_and_Model__c</columns>
    <columns>Plan__c</columns>
    <columns>Phone_Number_Display__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>